--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.1",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.6",
     "next": "15.4.3",
     "react": "19.1.0",
