--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.1",
+    "@mercadopago/sdk-react": "^1.0.3",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.6",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
-    "swiper": "^11.2.10"
+    "sonner": "^2.0.7",
+    "swiper": "^11.2.10",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
